--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ plugins {
 }
 
 runIde {
-    jvmArgs "-Duser.language=en -Duser.country=US"
+    jvmArgs "-Duser.language=en -Duser.country=US -Dawt.useSystemAAFontSettings=on"
 }
 
 group 'cn.shanghai.oyb'
