--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@
 plugins {
     id 'java'
     id 'org.jetbrains.intellij' version '0.6.5'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.21'
+    id 'org.jetbrains.kotlin.jvm' version '1.5.0'
     id 'scala'
 }
 
@@ -51,8 +51,8 @@ dependencies {
 
 intellij {
     plugins = ['java']
-    version '2021.1.3'
-    //localPath '/Applications/IntelliJ IDEA CE.app'
+    version '2021.2.3'
+    //localPath '/home/ouyubin/idea-IC'
 
 }
 
@@ -60,8 +60,8 @@ subprojects {
     apply plugin: 'org.jetbrains.intellij'
     intellij {
         plugins = ['java']
-        version '2021.1.3'
-        //localPath '/Applications/IntelliJ IDEA CE.app'
+        version '2021.2.3'
+        //localPath '/home/ouyubin/idea-IC'
     }
 }
 
@@ -84,5 +84,5 @@ patchPluginXml {
       </ul>
       """
     sinceBuild '202.*'
-    untilBuild '211.*'
+    untilBuild '212.*'
 }
